# conan-libjpeg

./: .travis.yml  CMakeLists.txt  FindJPEG.cmake  README.md  build.py  conanfile.py
test/: CMakeLists.txt  conanfile.py
